# switchshuttle

./: .gitignore  .versionrc.js  .versionrc.json  CHANGELOG.md  Cargo.toml  README.md  README_CH.md  README_DE.md  README_JA.md  README_RU.md  README_ZH.md  changelog.md  development.md  eslint.config.mjs  generate-html.cjs  package-lock.json  package.json  pnpm-lock.yaml  post_install.sh  publish-to-homebrew.sh  tauri.conf.json  todo.md  vite.config.ts
.github/workflows/: ar.yml  arm.yml  build.yml  docs.yml  update-homebrew-cask.yml
Casks/: switchshuttle.rb  switchshuttle.rb.bak
docs/: ADDING_WINDOWS.md  README.md  generate-static.cjs  index.html  index_de.html  index_ja.html  index_ru.html  index_zh.html  nuxt.config.ts  package.json  pnpm-lock.yaml  styles.css
docs/assets/css/: main.css
docs/components/: AboutWindow.vue  BrowserWindow.vue  CalculatorWindow.vue  ChangelogWindow.vue  ClickHint.vue  ConfigFolderWindow.vue  DesktopIcons.vue  DownloadWindow.vue  GalaxyGameWindow.vue  HelpWindow.vue  HomepageWindow.vue  JsonEditorWindow.vue  MenuBar.vue  MusicPlayerWindow.vue  NotificationBubble.vue  NotificationModal.vue  NotificationPanel.vue  NotificationWindow.vue  ReadmeWindow.vue  TaskBar.vue  TerminalWindow.vue  Window.vue
docs/components/icons/: CalculatorIcon.vue  MusicIcon.vue
docs/composables/: useNotifications.ts  useWindowManager.ts
docs/config/: menu.ts  windows.ts
docs/data/readme/: de.json  en.json  ja.json  ru.json  zh.json
docs/i18n/locales/: de.json  en.json  ja.json  ru.json  zh.json
docs/pages/: index.vue
docs/scripts/: generate-readme-data.js
docs/server/api/: changelog.get.ts  changelog.json.get.ts  readme.get.ts
homebrew-switchshuttle/: README.md
homebrew-switchshuttle/Casks/: switchshuttle.rb
icons/: icon.icns
scripts/: Alacritty-Current.scpt  Alacritty-Tab.scpt  Alacritty-Window.scpt  Hyper-Current.scpt  Hyper-Tab.scpt  Hyper-Window.scpt  Starship-Current.scpt  Starship-Tab.scpt  Starship-Window.scpt  Terminal-Current.scpt  Terminal-Tab.scpt  Terminal-Window.scpt  Warp-Current.scpt  Warp-Tab.scpt  Warp-Window.scpt  iTerm-Tab.scpt  iTerm-Window.scpt  switchshuttle.zsh
src/: App.vue  about.rs  commands.rs  config.rs  editor.html  helpers.rs  main.css  main.rs  main.ts  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: Alacritty-Tab.scpt  Alacritty-Window.scpt  Hyper-Tab.scpt  Hyper-Window.scpt  Terminal-Current.scpt  Terminal-Tab.scpt  Terminal-Window.scpt  VSCode-Current.scpt  VSCode-Tab.scpt  VSCode-Window.scpt  Warp-Current.scpt  iTerm-Current.scpt
src-tauri/src/: cli.rs  commands.rs  config.rs  console.rs  execute.rs  helpers.rs  hotkeys.rs  lib.rs  main.rs  menu.rs  menu_structure.rs  settings.rs
src/__tests__/: setup.ts
src/__tests__/components/: Button.test.ts
src/assets/: styles.css
src/components/: AppHeader.vue  Button.vue  Card.vue  CollapsibleSection.vue  CommandItem.vue  CommandSubmenu.vue  CommandTypeSelector.vue  CommandsTable.vue  ConfigEditor.vue  ConfigSelector.vue  CustomSelect.vue  HotkeyInput.vue  IconSelector.vue  Input.vue  Modal.vue  Model.vue  README.md  SchedulerInput.vue  SchedulerSelect.vue  SubcommandTable.vue  TemplateCommandsModal.vue  Toggle.vue
src/components/commands/: CommandInput.vue  CommandItem.vue  CommandSubmenu.vue  CommandsTable.vue
src/components/config/: ConfigEditor.vue  ConfigSelector.vue
src/components/forms/: CustomSelect.vue  HotkeyInput.vue  IconSelector.vue  SchedulerInput.vue  SchedulerSelect.vue  TagEditor.vue
src/components/icons/: AddIcon.vue  CancelIcon.vue  ChartIcon.vue  CheckIcon.vue  ChevronDownIcon.vue  ChevronRightIcon.vue  ChevronUpIcon.vue  ClearIcon.vue  ClockIcon.vue  CopyIcon.vue  DocumentIcon.vue  DuplicateIcon.vue  EditIcon.vue  ErrorIcon.vue  ExternalLinkIcon.vue  FolderIcon.vue  FolderOpenIcon.vue  GitHubIcon.vue  LightningIcon.vue  LightningSmallIcon.vue  MailIcon.vue  RunIcon.vue  SearchIcon.vue  SettingsIcon.vue  ShieldIcon.vue  SpinnerIcon.vue  SuccessIcon.vue  TemplatesIcon.vue  TerminalIcon.vue  TrashIcon.vue  WarningIcon.vue  WebsiteIcon.vue  XIcon.vue
src/components/modals/: ConfirmModal.vue  TemplateCommandsModal.vue
src/components/performance/: PerformanceMonitor.vue
src/components/ui/: Card.vue  CollapsibleSection.vue  CustomButton.vue  Modal.vue  Toggle.vue  ValidatedField.vue
src/composables/: usePerformance.ts
src/lib/: error-handler.ts  security.ts  tauri-commands-plugin.ts  tauri-commands.ts  templates.ts  terminals.ts  validation-rules.ts
src/lib/templates/: backend.json  cloud.json  database.json  development.json  devops.json  frontend.json  monitoring.json  scheduler.json  security.json  (+5 more)
src/pages/: About.vue  Create.vue  Editor.vue  Help.vue  Inputs.vue  Loading.vue  Main.vue  Settings.vue  Update.vue
src/plugins/: eventBus.ts  globalListenerPlugin.ts
src/ui/: about.html  create.html  editor.html  inputs.html  loading.html  main.html  main.js  update.html
