[package]
name = "SwitchShuttle"
version = "1.0.1"
edition = "2021"

[dependencies]
tauri = { version = "1.7.1", features = [ "system-tray", "shell-open", "wry"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
dirs = "5.0.1"
include_dir = "0.7"

[target.'cfg(windows)'.dependencies]
winreg = "0.52.0"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
