[package]
name = "SwitchShuttle"
version = "0.0.0"
edition = "2021"

[dependencies]
tauri = { version = "^2.0.3", features = ["wry", "tray-icon", "unstable", "image-png"] }
tauri-plugin-fs = "^2.0.1"
tauri-plugin-dialog = "2.0.1"
tauri-plugin-log = "2.0.1"
tauri-plugin-notification = "2.0.1"
tauri-plugin-shell = "2.0.1"
tauri-plugin-store = "2.0.1"
tauri-plugin-process = "2.0.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
dirs = "5.0.1"
include_dir = "0.7"
reqwest = { version = "0.12.8", features = ["json", "blocking"] }
once_cell = "1.19.0"
openssl = { version = "0.10", features = ["vendored"] }

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[target.'cfg(windows)'.dependencies]
winreg = "0.52.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2.0.1"
tauri-plugin-cli = "2.0.1"
tauri-plugin-global-shortcut = "2.0.1"
tauri-plugin-positioner = { version = "2.0.1", features = ["tray-icon"] }
tauri-plugin-updater = "2.0.2"

[build-dependencies]
tauri-build = { version = "^2.0.1", features = [] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
