[package]
name = "SwitchShuttle"
version = "0.0.0"
edition = "2021"

[dependencies]
tauri = { version = "^2.6.2", features = ["wry", "tray-icon", "unstable", "image-png"] }
tauri-plugin-fs = "^2.4.0"
tauri-plugin-dialog = "2.3.0"
tauri-plugin-log = { version = "2.6.0", features = ["colored"] }
log = "0.4.20"
tauri-plugin-notification = "2.3.0"
tauri-plugin-shell = "2.3.0"
tauri-plugin-store = "2.3.0"
tauri-plugin-process = "2.3.0"
tauri-plugin-opener = "2.4.0"
tauri-plugin-autostart = "2.5.0"
tauri-plugin-cli = "2.4.0"
tauri-plugin-global-shortcut = "2.3.0"
tauri-plugin-positioner = { version = "2.3.0", features = ["tray-icon"] }
tauri-plugin-updater = "2.9.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
dirs = "6.0.0"
include_dir = "0.7"
lazy_static = "1.4"
reqwest = { version = "0.12.20", features = ["json", "blocking"] }
once_cell = "1.21.3"
openssl = { version = "0.10.73", features = ["vendored"] }
rodio = "0.20.1"
timeout-readwrite = "0.4.0"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"

[build-dependencies]
tauri-build = { version = "^2.3.0", features = [] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
