[package]
name = "SwitchShuttle"
version = "0.0.0"
edition = "2021"

[dependencies]
tauri = { version = "^2.8.5", features = ["wry", "tray-icon", "unstable", "image-png"] }
tauri-plugin-fs = "^2.4.1"
tauri-plugin-dialog = "2.4.0"
tauri-plugin-log = { version = "2.7.0", features = ["colored"] }
log = "0.4.27"
tauri-plugin-notification = "2.3.0"
tauri-plugin-shell = "2.3.1"
tauri-plugin-store = "2.3.0"
tauri-plugin-process = "2.3.0"
tauri-plugin-opener = "2.4.0"
tauri-plugin-autostart = "2.5.0"
tauri-plugin-cli = "2.4.0"
tauri-plugin-global-shortcut = "2.3.0"
tauri-plugin-positioner = { version = "2.3.0", features = ["tray-icon"] }
tauri-plugin-os = "2.3.1"
tauri-plugin-updater = "2.9.0"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
dirs = "6.0.0"
include_dir = "0.7"
reqwest = { version = "0.12.23", features = ["json", "blocking"] }
once_cell = "1.21.3"
tokio = { version = "1.0", features = ["full"] }
openssl = { version = "0.10.73", features = ["vendored"] }
cron = "0.15.0"
chrono = { version = "0.4.42", features = ["serde"] }

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"

[build-dependencies]
tauri-build = { version = "^2.4.0", features = [] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "z" # Оптимизация для размера
lto = true # Включение Link Time Optimization
codegen-units = 1 # Уменьшение количества единиц компиляции для лучшей оптимизации
panic = "abort" # Уменьшение объема кода для обработки паник
strip = true # Удаление символов отладки
